--- a/config/svhn_bal_to_multi.yaml
+++ b/config/svhn_bal_to_multi.yaml
@@ -1,5 +1,5 @@
 # common
-datadir: "/home/zhmiao/datasets/digits/"  # Please change this directory accordingly
+datadir: "datasets/c-digits/"  # Please change this directory accordingly
 src: "svhn_bal"
 tgt: "multi"
 tgt_list: ['mnist', 'mnistm', 'usps']
